Enhance portfolio with project details, case studies, and improved navigation
- Updated project descriptions in projects.html, including tech stacks and problem-solving details for SentinelOS and FindAddis.
- Added case study pages for FindAddis and SentinelOS with detailed problem, solution, architecture, tech stack, database schema, challenges, performance considerations, refactor ideas, and impact.
- Improved skills.html with updated title, description, and structured skills list.
- Introduced AI chatbot and security scanner modals in script.js for enhanced interactivity.
- Implemented dark mode and developer mode toggles in script.js for better user experience.
- Added GitHub API integration for dynamic skill rendering and recent commits display.
- Created launch configuration for VSCode to streamline development.

--- a/about.html
+++ b/about.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me | Hanna K</title>
+    <title>About | Hana Kassahun - Full-Stack Developer</title>
+    <meta name="description" content="About Hana Kassahun, full-stack developer and AI & Cybersecurity enthusiast. Learn more about my background, skills, and mission.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
+    <!-- ===== HEADER ===== -->
     <header>
-        <nav class="container">
+        <nav class="container" aria-label="Main Navigation">
             <div class="logo">Hanna<span>.</span></div>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">home</a></li> 
@@ -20,20 +25,24 @@
         </nav>
     </header>
 
-    <section class="section">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>
-                I’m passionate about building creative and impactful solutions through technology. 
-                With a growing interest in AI and Cybersecurity, I aim to combine my skills 
-                in programming, data management, and problem-solving to create projects that make a difference.
-            </p>
-        </div>
-    </section>
+    <!-- ===== ABOUT SECTION ===== -->
+    <main>
+        <section class="section">
+            <div class="container">
+                <h2>About Me</h2>
+                <p>
+                    I’m passionate about building creative and impactful solutions through technology. <br>
+                    With a growing interest in <strong>AI</strong> and <strong>Cybersecurity</strong>, I aim to combine my skills
+                    in programming, data management, and problem-solving to create projects that make a difference.
+                </p>
+            </div>
+        </section>
+    </main>
 
+    <!-- ===== FOOTER ===== -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Hanna K. All rights reserved.</p>
+            <p>&copy; 2025 Hana Kassahun. All rights reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
