--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Hanna K</title>
+    <title>Contact | Hana Kassahun - Developer</title>
+    <meta name="description" content="Contact Hana Kassahun, full-stack developer. Email, GitHub, LinkedIn, and resume download.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
+    <!-- ===== HEADER ===== -->
     <header>
-        <nav class="container">
+        <nav class="container" aria-label="Main Navigation">
             <div class="logo">Hanna<span>.</span></div>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">home</a></li> 
@@ -20,24 +25,32 @@
         </nav>
     </header>
 
-    <section id="contact" class="section bg-light">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <form id="contact-form">
-                <label for="email">Email:</label>
-                <input type="email" id="email" required>
-                <label for="message">Message:</label>
-                <textarea id="message" required></textarea>
-                <button type="submit" class="btn">Send Message</button>
-            </form>
-            <p>Email: <a href="mailto:hannabirle@email.com">hannabirle@email.com</a></p>
-            <p>GitHub: <a href="https://github.com/" target="_blank">github.com/sleeze</a></p>
-        </div>
-    </section>
+    <!-- ===== CONTACT SECTION ===== -->
+    <main>
+        <section id="contact" class="section bg-light">
+            <div class="container">
+                <h2>Contact Me</h2>
+                <form id="contact-form">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" required>
+                    <label for="message">Message:</label>
+                    <textarea id="message" required></textarea>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+                <div style="margin-top:2.2rem; text-align:center;">
+                    <a href="mailto:hannabirle@email.com" class="btn" style="margin:0 0.5rem 1rem 0; background:#ff007f; color:#fff;">Email Me</a>
+                    <a href="https://github.com/hanakassahun" class="btn" style="margin:0 0.5rem 1rem 0; background:#23272f; color:#fff;" target="_blank">GitHub</a>
+                    <a href="https://linkedin.com/in/hanakassahun" class="btn" style="margin:0 0.5rem 1rem 0; background:#0a66c2; color:#fff;" target="_blank">LinkedIn</a>
+                    <a href="resume.pdf" class="btn" style="margin:0 0.5rem 1rem 0; background:#444; color:#fff;" download>Download Resume (PDF)</a>
+                </div>
+            </div>
+        </section>
+    </main>
 
+    <!-- ===== FOOTER ===== -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Hanna K. All rights reserved.</p>
+            <p>&copy; 2025 Hana Kassahun. All rights reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
