--- a/skills.html
+++ b/skills.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills | Hanna K</title>
+    <title>Skills | Hana Kassahun - Developer</title>
+    <meta name="description" content="Skills of Hana Kassahun: Java, C++, JavaScript, HTML, CSS, MySQL, PostgreSQL, AI, Cybersecurity, and more.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
+    <!-- ===== HEADER ===== -->
     <header>
-        <nav class="container">
+        <nav class="container" aria-label="Main Navigation">
             <div class="logo">Hanna<span>.</span></div>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">home</a></li> 
@@ -20,29 +25,33 @@
         </nav>
     </header>
 
-    <section id="skills" class="section">
-        <div class="container">
-            <h2>Skills</h2>
-            <ul class="skills-list">
-                <li>Java</li>
-                <li>C++</li>
-                <li>JavaScript (Beginner)</li>
-                <li>HTML & CSS</li>
-                <li>MySQL & PostgreSQL</li>
-                <li>Bootstrap</li>
-                <li>ArcGIS</li>
-                <li>Data Structures & Algorithms</li>
-                <li>System Analysis</li>
-                <li>Logic Design</li>
-                <li>AI & Cybersecurity Basics</li>
-                <li>Git/GitHub</li>
-            </ul>
-        </div>
-    </section>
+    <!-- ===== SKILLS SECTION ===== -->
+    <main>
+        <section id="skills" class="section">
+            <div class="container">
+                <h2>Skills</h2>
+                <ul class="skills-list">
+                    <li>Java</li>
+                    <li>C++</li>
+                    <li>JavaScript (Beginner)</li>
+                    <li>HTML &amp; CSS</li>
+                    <li>MySQL &amp; PostgreSQL</li>
+                    <li>Bootstrap</li>
+                    <li>ArcGIS</li>
+                    <li>Data Structures &amp; Algorithms</li>
+                    <li>System Analysis</li>
+                    <li>Logic Design</li>
+                    <li>AI &amp; Cybersecurity Basics</li>
+                    <li>Git/GitHub</li>
+                </ul>
+            </div>
+        </section>
+    </main>
 
+    <!-- ===== FOOTER ===== -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Hanna K. All rights reserved.</p>
+            <p>&copy; 2025 Hana Kassahun. All rights reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
